# GameOfLife_CPP

./: CMakeLists.txt  GameOfLife.cpp
configuration/: GameConfiguration.cpp  GameConfiguration.h
game/: Game.cpp
gol/: Game.cpp  Game.h
managers/: ArgumentManager.cpp  ArgumentManager.h
validator/: ArgumentValidator.cpp  ArgumentValidator.h  ValidArguments.cpp  ValidArguments.h
